# velociraptor-forensic-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docker/: docker-compose.yaml  generate-api-key.sh
tests/: test_forensic.py
velociraptor_forensic_mcp/: __init__.py  __main__.py  config.py  exceptions.py  forensic_helpers.py  server.py  vr_client.py
